# Smald

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  demo.cpp
include/: smald.h
src/: CMakeLists.txt  smald.cpp
tests/: CMakeLists.txt  test_command.cpp  test_conf.conf  test_conf.cpp  test_parse_args.cpp  test_trim.cpp
